Update README: add Homebrew/Docker install, fix model paths and binary size
- Add Homebrew, manual install, and Docker sections at the top
- Fix ONNX model size (23MB not 86MB) and cache path (~/.websearch/models/)
- Fix native binary startup time (~100ms) and remove old 167MB size reference
- Update tech stack: MCP Java SDK 0.17, DJL 0.36, remove Spring AI reference
- Add Brave Search and Tor proxy examples to native image section

Co-authored-by: Cursor <cursoragent@cursor.com>